grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) => choice(
      $.top_level_shared_tail_function_branch,
      $.top_level_conditional,
      $._top_level_item_base,
      $.conditional_function_definition,
    ),

    function_definition: ($) => functionDefinitionWithBody($, $._function_body),

    _function_body: ($) => functionBodyChoice($, {
      blockRule: $.block,
      conditionalRule: $.block_conditional,
    }),

    function_declaration: ($) => seq(
      field("kind", choice("forward", "native")),
      choice(
        functionDeclarationSignatureTail($),
        seq(
          field("name", alias($._function_member_name, $.member_expression)),
          field("parameters", choice($.parameter_list, $.parameter_list_reference)),
        ),
      ),
      optional(seq("=", field("alias", $.identifier))),
      ";",
    ),

    state_classifier: ($) => seq(
      "<",
      optional(commaSep1(choice($.scoped_state_entry, $.state_name))),
      ">",
    ),

    scoped_state_entry: ($) => seq(
      field("scope", $.state_name),
      ":",
      field("state", $.state_name),
    ),

    state_name: ($) => token(choice("default", /[A-Za-z_][A-Za-z0-9_]*/)),

    _function_name: ($) => choice(
      $.identifier,
      $.at_identifier,
      $.operator_name,
    ),

    _callback_named_identifier: ($) => seq(
      field("name", $.identifier),
      optional(field("callback_signature", $.callback_signature)),
    ),

    parameter_list: ($) => seq(
      "(",
      optional($._parameter_list_items),
      ")",
    ),

    parameter_list_reference: ($) => choice(
      $.identifier,
      $.macro_pasted_identifier,
    ),

    _parameter_list_items: ($) => directiveListItems($, {
      item: $._parameter_list_item,
      conditional: $.parameter_conditional,
      conditionalNoComma: $.parameter_conditional_no_comma,
    }),

    parameter_declaration: ($) => seq(
      repeat(choice("const", "stock")),
      optional("&"),
      optional(field("type", choice($.tagged_type, $.tag_set_type))),
      optional("&"),
      $._callback_named_identifier,
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      optional(seq("=", field("default_value", choice($.array_literal, $._expression)))),
    ),

    variable_declaration: ($) => choice(
      seq(
        repeat(field("prefix", $.identifier)),
        $._variable_declaration_prefix,
        repeat(field("qualifier_reference", $.declaration_qualifier_reference)),
        $._variable_declarator_list,
        ";",
      ),
      prec(1, seq(
        repeat(field("prefix", $.identifier)),
        $._variable_declaration_prefix,
        repeat(field("qualifier_reference", $.declaration_qualifier_reference)),
        alias($._state_variable_declarator, $.variable_declarator),
        statementTerminator($),
      )),
    ),

    _variable_declaration_prefix: ($) => repeat1(choice(
      $._declaration_qualifier,
      "public",
      "stock",
    )),

    _variable_declarator_list: ($) => directiveListItems($, {
      item: $.variable_declarator,
      conditional: $.variable_declarator_conditional,
      conditionalNoComma: $.variable_declarator_conditional_no_comma,
    }),

    variable_declarator: ($) => choice(
      seq(
        optional(field("type", $.tagged_type)),
        $._callback_named_identifier,
        repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
        optional(seq("=", field("initializer", choice($.array_literal, $._expression)))),
      ),
      seq(
        optional(field("type", $.tagged_type)),
        field("name", $.identifier),
        repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
        field("state", $.state_classifier),
      ),
    ),

    _state_variable_declarator: ($) => seq(
      optional(field("type", $.tagged_type)),
      field("name", $.identifier),
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      field("state", $.state_classifier),
    ),

    enum_declaration: ($) => seq(
      "enum",
      optional(field("name", $.identifier)),
      optional(seq(
        ":",
        optional(field("type", choice($.identifier, $.tag_wildcard))),
      )),
      optional(field("increment", $.enum_increment_clause)),
      "{",
      optional($._enum_entries),
      "}",
      optional(";"),
    ),

    _enum_entries: ($) => directiveListItems($, {
      item: $.enum_entry,
      conditional: $.enum_conditional,
      conditionalNoComma: $.enum_conditional_no_comma,
    }),

    enum_entry: ($) => seq(
      optional(field("type", $.tagged_type)),
      $._callback_named_identifier,
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      optional(seq("=", field("value", $._expression))),
    ),

    tagged_type: ($) => seq(
      field("tag", choice($.identifier, $.tag_wildcard)),
      optional(field("callback_signature", $.callback_signature)),
      token.immediate(":"),
    ),

    dimension: ($) => seq("[", "]"),

    fixed_dimension: ($) => seq("[", field("size", choice($.expression_list, $._expression)), "]"),

    block: ($) => seq(
      "{",
      repeat($._block_statement),
      "}",
    ),

    _block_statement: ($) => blockConditionalChoice($, $._block_statement_base),

    _statement: ($) => blockConditionalChoice($, $._statement_base),

    if_statement: ($) => prec.right(seq(
      "if",
      "(",
      field("condition", choice($.expression_list, $._expression)),
      ")",
      field("consequence", $._statement),
      optional(seq("else", field("alternative", $._statement))),
    )),

    switch_statement: ($) => seq(
      "switch",
      "(",
      field("condition", choice($.expression_list, $._expression)),
      ")",
      "{",
      repeat($._switch_item),
      "}",
    ),

    ...directiveIfGroup({
      ifName: "switch_item_conditional",
      elseifName: "switch_item_elseif",
      elseName: "switch_item_else",
    }, ($) => $._switch_item_base),

    _switch_item: ($) => choice(
      $.switch_item_conditional,
      $._switch_item_base,
    ),

    _switch_item_base: ($) => choice(
      $.case_statement,
      $.default_statement,
    ),

    default_statement: ($) => prec.right(1, seq(
      "default",
      ":",
      repeat($._statement),
    )),

    state_statement: ($) => seq(
      "state",
      optional(field("condition", $.parenthesized_expression)),
      field("scope", $.state_name),
      optional(seq(
        ":",
        commaSep1($.state_name),
      )),
      optional(";"),
    ),

    while_statement: ($) => seq(
      "while",
      "(",
      field("condition", choice($.expression_list, $._expression)),
      ")",
      field("body", $._statement),
    ),

    _for_header: ($) => seq(
      "for",
      "(",
      field("initializer", optional(choice($._qualified_variable_declaration_clause, $.expression_list, $._expression))),
      ";",
      field("condition", optional(choice($.expression_list, $._expression))),
      ";",
      field("update", optional(choice($.expression_list, $._expression))),
      ")",
    ),

    do_while_statement: ($) => seq(
      "do",
      field("body", $._statement),
      "while",
      "(",
      field("condition", choice($.expression_list, $._expression)),
      ")",
      ";",
    ),

    for_statement: ($) => prec.right(seq(
      $._for_header,
      field("body", $._statement),
    )),

    goto_statement: ($) => seq(
      "goto",
      field("label", $.identifier),
      ";",
    ),

    label_statement: ($) => prec(1, choice(
      seq(
        field("label", $.identifier),
        token.immediate(/:[ \t]*(\r?\n)+/),
      ),
      seq(
        field("label", $.identifier),
        token.immediate(":"),
        field("statement", $.inline_labeled_statement),
      ),
    )),

    inline_labeled_statement: ($) => choice(
      $.block_conditional,
      $.block,
      $.variable_declaration,
      $.inline_callback_definition,
      $.call_statement,
      $.assert_statement,
      $.exit_statement,
      $.sleep_statement,
      $.conditional_else_statement,
      $.if_statement,
      $.switch_statement,
      $.conditional_loop_fallback_statement,
      $.conditional_loop_variant_statement,
      $.conditional_loop_statement,
      $.while_statement,
      $.foreach_statement,
      $.do_while_statement,
      $.for_statement,
      $.goto_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.expression_statement,
      $.preproc_include,
      $.preproc_tryinclude,
      $.preproc_define,
      $.preproc_emit,
      $.preproc_pragma,
      $.preproc_undef,
      $.preproc_assert,
      $.preproc_error,
      $.preproc_warning,
      $.preproc_line,
      $.preproc_file,
      $.preproc_endinput,
    ),

    return_statement: ($) => seq(
      "return",
      optional(field("value", choice($.expression_list, $._expression))),
      ";",
    ),

    break_statement: ($) => seq("break", ";"),

    continue_statement: ($) => seq("continue", ";"),

    inline_callback_definition: ($) => seq(
      "inline",
      optional(field("qualifier", "const")),
      field("name", $._function_name),
      field("parameters", $.parameter_list),
      field("body", $.block),
    ),

    expression_statement: ($) => seq(
      field("expression", choice($.statement_expression_list, $._statement_expression)),
      statementTerminator($),
    ),

    _expression: ($) => choice(
      $._expression_not_binary,
      $.binary_expression,
    ),

    _statement_expression: ($) => choice(
      $._statement_expression_not_binary,
      $.binary_expression,
    ),

    _adjacent_string_atom: ($) => choice(
      $.identifier,
      $.string_literal,
      $.function_reference_expression,
    ),

    adjacent_string_expression: ($) => prec.left(PREC.ADD, choice(
      seq(
        field("left", $.function_reference_expression),
        field("right", $.string_literal),
        repeat(field("right", $._adjacent_string_atom)),
      ),
      seq(
        field("left", $.identifier),
        field("right", $.identifier),
        repeat(field("right", $._adjacent_string_atom)),
      ),
      seq(
        field("left", choice(
          $.identifier,
          $.string_literal,
        )),
        field("right", $.string_literal),
        repeat(field("right", $._adjacent_string_atom)),
      ),
      seq(
        field("left", $.string_literal),
        field("right", choice(
          $.identifier,
          $.function_reference_expression,
        )),
        repeat(field("right", $._adjacent_string_atom)),
      ),
    )),

    sizeof_expression: ($) => prec(PREC.SIZEOF, choice(
      seq(
        "sizeof",
        field("argument", prec(PREC.SUBSCRIPT, $._sizeof_subscript_expression)),
      ),
      seq(
        "sizeof",
        field("argument", $.identifier),
      ),
      seq(
        "sizeof",
        "(",
        field("argument", $._sizeof_subscript_expression),
        ")",
      ),
      seq(
        "sizeof",
        "(",
        field("argument", $.identifier),
        ")",
      ),
    )),

    _sizeof_subscript_expression: ($) => prec.left(PREC.SUBSCRIPT, seq(
      field("array", choice(
        $.identifier,
        $.call_expression,
        $._sizeof_subscript_expression,
        $.subscript_expression,
        $.parenthesized_expression,
      )),
      "[",
      optional(field("index", choice($.expression_list, $._expression))),
      "]",
    )),

    assignment_expression: ($) => prec.right(PREC.ASSIGNMENT, seq(
      field("left", choice(
        $.identifier,
        $.subscript_expression,
        $.packed_subscript_expression,
        $.tagged_expression,
        $.member_expression,
        $.callback_member_expression,
      )),
      field("operator", choice(...ASSIGNMENT_OPERATORS)),
      field("right", $._expression),
    )),

    binary_expression: ($) => binaryExpression($._expression, [
      ["||", PREC.LOGICAL_OR],
      ["&&", PREC.LOGICAL_AND],
      ["|", PREC.BITWISE_OR],
      ["^", PREC.BITWISE_XOR],
      ["&", PREC.BITWISE_AND],
      ["==", PREC.EQUALITY],
      ["!=", PREC.EQUALITY],
      ["<", PREC.RELATIONAL],
      ["<=", PREC.RELATIONAL],
      [">", PREC.RELATIONAL],
      [">=", PREC.RELATIONAL],
      ["<<", PREC.SHIFT],
      [">>>", PREC.SHIFT],
      [">>", PREC.SHIFT],
      ["+", PREC.ADD],
      ["-", PREC.ADD],
      ["...", PREC.ADD],
      ["*", PREC.MULTIPLY],
      ["/", PREC.MULTIPLY],
      ["%", PREC.MULTIPLY],
    ]),

    unary_expression: ($) => prec.left(PREC.UNARY, seq(
      field("operator", choice(...UNARY_OPERATORS)),
      field("argument", $._expression),
    )),

    update_expression: ($) => choice(
      prec.left(PREC.UNARY, seq(
        field("argument", choice($.identifier, $.subscript_expression)),
        field("operator", choice(...UPDATE_OPERATORS)),
      )),
      prec.right(PREC.UNARY, seq(
        field("operator", choice(...UPDATE_OPERATORS)),
        field("argument", choice($.identifier, $.subscript_expression)),
      )),
    ),

    _function_member_name: ($) => seq(
      field("object", $.identifier),
      ".",
      field("property", $.identifier),
    ),

    member_expression: ($) => prec.left(PREC.CALL, seq(
      field("object", choice(
        $.identifier,
        $.call_expression,
        $.subscript_expression,
        $.member_expression,
        $.parenthesized_expression,
      )),
      ".",
      field("property", $.identifier),
    )),

    call_expression: ($) => prec.left(PREC.CALL, seq(
      field("function", choice(
        $.identifier,
        $.callback_member_expression,
        $.member_expression,
        $.parenthesized_expression,
        $.subscript_expression,
        $.tagged_expression,
      )),
      field("arguments", $.argument_list),
    )),

    argument_list: ($) => seq(
      "(",
      optional($._argument_list_items),
      ")",
    ),

    _argument_list_items: ($) => directiveListItems($, {
      item: $._argument_list_item,
      conditional: $.argument_conditional,
      conditionalNoComma: $.argument_conditional_no_comma,
    }),

    subscript_expression: ($) => prec.left(PREC.SUBSCRIPT, seq(
      field("array", choice(
        $.identifier,
        $.call_expression,
        $.member_expression,
        $.subscript_expression,
        $.parenthesized_expression,
      )),
      "[",
      field("index", choice($.expression_list, $._expression)),
      "]",
    )),

    tagged_expression: ($) => prec.right(PREC.CAST, seq(
      field("type", $.tagged_type),
      field("value", choice(
        $.tagged_expression,
        $.identifier,
        $.parenthesized_expression,
        $.call_expression,
        $.subscript_expression,
        $.unary_expression,
        $._literal,
      )),
    )),

    parenthesized_expression: ($) => seq(
      "(",
      field("expression", choice($.expression_list, $._expression)),
      ")",
    ),

    preproc_emit: ($) => seq(
      preprocessor("emit"),
      field("value", $.preproc_text),
    ),

    preproc_pragma: ($) => namedDirective($, "pragma",
      optional(seq(
        token.immediate(/[ \t]+/),
        field("value", $.preproc_text),
      )),
    ),

    preproc_warning: ($) => messageDirective($, "warning"),

    preproc_if: ($) => seq(
      preprocessor("if"),
      field("condition", $.preproc_expression),
    ),

    preproc_else: ($) => preprocessor("else"),

    preproc_endif: ($) => preprocessor("endif"),

    preproc_defined: ($) => choice(
      seq("defined", field("name", $.identifier)),
      seq("defined", "(", field("name", $.identifier), ")"),
    ),

    preproc_text: ($) => token(prec(-1, /([^\\\r\n]|\\\r?\n|\\)+/)),

    integer_literal: ($) => token(/[0-9][0-9_]*/),

    float_literal: ($) => token(choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
    )),
