test/corpus/classic_constructs.txt
=================
static function
=================

static Helper(playerid)
{
  return playerid;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (return_statement
        value: (identifier)))))

========================
special function names
========================

forward @timer();
native Float:operator*(Float:oper1, Float:oper2) = floatmul;
native [2]Encode(index);
native Tag:[2]Pack(value);
stock operator~(value)
{
  return value;
}
stock Float:operator++(Float:value)
{
    return value;
}

task TimerTick()
{
  return 1;
}

ptask PlayerTick(playerid)
{
  return 1;
}

void NoReturn()
{
}

---

(source_file
  (function_declaration
    name: (at_identifier
      (identifier))
    parameters: (parameter_list))
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    alias: (identifier))
  (function_declaration
    return_size: (fixed_dimension
      size: (integer_literal))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))))
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    return_size: (fixed_dimension
      size: (integer_literal))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))))
  (function_definition
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (return_statement
        value: (identifier))))
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    body: (block
      (return_statement
        value: (identifier))))
  (function_definition
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list)
    body: (block)))

=========================
conditional function body
=========================

stock WrappedBody(value)
#if defined FEATURE
    return 1;
#else
    return 2;
#endif

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block_conditional
      (preproc_if
        condition: (preproc_expression
          (preproc_defined
            name: (identifier))))
      (return_statement
        value: (integer_literal))
      alternative: (block_else
        (preproc_else)
        (return_statement
          value: (integer_literal)))
      (preproc_endif))))

===============
pragma directives
===============

#pragma dynamic 32768
#pragma tabsize 4

---

(source_file
  (preproc_pragma
    name: (identifier)
    value: (preproc_text))
  (preproc_pragma
    name: (identifier)
    value: (preproc_text)))

===============
emit directives
===============

#emit LOAD.S.pri gValue

stock FastAbs(value)
{
    #emit LOAD.S.pri value
    #emit ABS
    return value;
}

---

(source_file
  (preproc_emit
    value: (preproc_text))
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (preproc_emit
        value: (preproc_text))
      (preproc_emit
        value: (preproc_text))
      (return_statement
        value: (identifier)))))

===========================
multiple function modifiers
===========================

stock static Float:GetScale()
{
    return Float:(1.0);
}

---

(source_file
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (return_statement
        value: (tagged_expression
          type: (tagged_type
            tag: (identifier))
          value: (parenthesized_expression
            expression: (float_literal)))))))

===============
goto statements
===============

stock TestLabel(value)
{
    if (value < 0)
        goto invalid_value;

    return 1;

invalid_value:
  return 0;

next_step: goto invalid_value;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        consequence: (goto_statement
          label: (identifier)))
      (return_statement
        value: (integer_literal))
      (label_statement
        label: (identifier))
      (return_statement
        value: (integer_literal))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (goto_statement
            label: (identifier)))))))

===================================
macro prefixed function variants
===================================

HOOK_PUBLIC DestroyPickup(pickupid)
{
  foreach(new playerid : Player)
    return pickupid;
}

macro_forward AntiCheatGetSpeed(playerid) return playerid;
forward OnScriptInit SSCANF_BRACKETS;

---

(source_file
  (function_definition
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (macro_iterator_loop_statement
        name: (identifier)
        iterator: (macro_iterator
          name: (identifier)
          collection: (identifier))
        body: (return_statement
          value: (identifier)))))
  (function_definition
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (return_statement
      value: (identifier)))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list_reference
      (identifier))))

==============================
conditional function signature
==============================

#if defined STREAMER_ENABLE_TAGS
  HOOK_PUBLIC CreateDynamicPickup(STREAMER_TAG_PICKUP:pickupid, modelid, type)
#else
  HOOK_PUBLIC CreateDynamicPickup(pickupid, modelid, type)
#endif
{
    return 1;
}

---

(source_file
  (conditional_function_definition
    (preproc_if
      condition: (preproc_expression
        (preproc_defined
          name: (identifier))))
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        name: (identifier)))
    (preproc_else)
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        name: (identifier)))
    (preproc_endif)
    body: (block
      (return_statement
        value: (integer_literal)))))

=======================================
conditional function signature and body
=======================================

#if defined FEATURE
stock Combo(value)
#else
stock Combo(value, extra = 0)
#endif
#if defined INNER
    return value;
#else
    return extra;
#endif

---

(source_file
  (conditional_function_definition
    (preproc_if
      condition: (preproc_expression
        (preproc_defined
          name: (identifier))))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    (preproc_else)
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        name: (identifier)
        default_value: (integer_literal)))
    (preproc_endif)
    body: (block_conditional
      (preproc_if
        condition: (preproc_expression
          (preproc_defined
            name: (identifier))))
      (return_statement
        value: (identifier))
      alternative: (block_else
        (preproc_else)
        (return_statement
          value: (identifier)))
      (preproc_endif))))

=====================
inline label variants
=====================

stock MoreInlineLabels(value)
{
    setup: if (value > 0) {
        return 1;
    }

    fallback: new next = 1;
    loop_head: while (next) break;
    branch: switch (value) { default: return 0; }
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (if_statement
            condition: (binary_expression
              left: (identifier)
              right: (integer_literal))
            consequence: (block
              (return_statement
                value: (integer_literal))))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (variable_declaration
            (variable_declarator
              name: (identifier)
              initializer: (integer_literal)))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (while_statement
            condition: (identifier)
            body: (break_statement))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (switch_statement
            condition: (identifier)
            (default_statement
              (return_statement
                value: (integer_literal)))))))))

======================
hook forward statement
======================

CHAIN_FORWARD:OnThing() = 1;
hook Float:GetSpeed(playerid);
hook Float:GetSpeed(playerid) { return 0.0; }
forward callback.OnPlayerConnect(playerid);
forward callback.OnGameModeInit();

---

(source_file
  (prefixed_function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list)
    value: (integer_literal))
  (prefixed_function_declaration
    prefix: (identifier)
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))))
  (function_definition
    prefix: (identifier)
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (return_statement
        value: (float_literal))))
  (function_declaration
    name: (member_expression
      object: (identifier)
      property: (identifier))
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))))
  (function_declaration
    name: (member_expression
      object: (identifier)
      property: (identifier))
    parameters: (parameter_list)))

===========================
inline label branch variants
===========================

stock InlineLabelBranches(value)
{
    enter: { return 1; }
    countdown: for (; value > 0; value--) break;
    retry: do value--; while (value > 0);
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (block
            (return_statement
              value: (integer_literal)))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (for_statement
            condition: (binary_expression
              left: (identifier)
              right: (integer_literal))
            update: (update_expression
              argument: (identifier))
            body: (break_statement))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (do_while_statement
            body: (expression_statement
              expression: (update_expression
                argument: (identifier)))
            condition: (binary_expression
              left: (identifier)
              right: (integer_literal))))))))

===============================
inline label directive variants
===============================

stock InlineLabelDirectives(value)
{
    while (value > 0) {
        next_pass: continue;
    }

    emit_here: #emit ABS
  wrapped_guard: #if defined TESTING
    return 1;
#else
    return 2;
#endif
#if defined TESTING
    guard_here: #warning debug build
#endif
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (while_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        body: (block
          (label_statement
            label: (identifier)
            statement: (inline_labeled_statement
              (continue_statement)))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (preproc_emit
            value: (preproc_text))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (block_conditional
            (preproc_if
              condition: (preproc_expression
                (preproc_defined
                  name: (identifier))))
            (return_statement
              value: (integer_literal))
            alternative: (block_else
              (preproc_else)
              (return_statement
                value: (integer_literal)))
            (preproc_endif))))
      (block_conditional
        (preproc_if
          condition: (preproc_expression
            (preproc_defined
              name: (identifier))))
        (label_statement
          label: (identifier)
          statement: (inline_labeled_statement
            (preproc_warning
              message: (preproc_text))))
        (preproc_endif)))))

==============================
inline label expression variants
==============================

stock InlineLabelExpressions(value)
{
    next_value: value++;
    reset_value: value = 0;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (expression_statement
            expression: (update_expression
              argument: (identifier)))))
      (label_statement
        label: (identifier)
        statement: (inline_labeled_statement
          (expression_statement
            expression: (assignment_expression
              left: (identifier)
              right: (integer_literal))))))))

===============================
sizeof empty subscript variants
===============================

stock SizeofArraySlice(playerid)
{
    for(new i = sizeof(adArrayPTDs[]) - 1; i >= 0; --i)
        adArrayPTDs[playerid][i] = PlayerText:65535;
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (for_statement
        initializer: (variable_declarator
          name: (identifier)
          initializer: (binary_expression
            left: (sizeof_expression
              array: (identifier))
            right: (integer_literal)))
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        update: (update_expression
          argument: (identifier))
        body: (expression_statement
          expression: (assignment_expression
            left: (subscript_expression
              array: (subscript_expression
                array: (identifier)
                index: (identifier))
              index: (identifier))
            right: (tagged_expression
              type: (tagged_type
                tag: (identifier))
              value: (integer_literal))))))))

=================
state classifiers
=================

forward OnThing(playerid) <default>;
forward OnThing(playerid) <default, connected>;
stock OnThing(playerid) <default>
{
    return 1;
}

stock OnThing(playerid) <>
{
  return 1;
}

stock OnThing(playerid) <connected, idle>
{
    return 1;
}

stock OnThing(playerid) <_ALS : _ALS_x0, _ALS : _ALS_x1>
{
  return 1;
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    state: (state_classifier
      (state_name)))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    state: (state_classifier
      (state_name)
      (state_name)))
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    state: (state_classifier
      (state_name))
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    state: (state_classifier)
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    state: (state_classifier
      (state_name)
      (state_name))
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    state: (state_classifier
      (scoped_state_entry
        scope: (state_name)
        state: (state_name))
      (scoped_state_entry
        scope: (state_name)
        state: (state_name)))
    body: (block
      (return_statement
        value: (integer_literal)))))

===================
pragma enum boundary
===================

enum first_enum {
    value_a
}
#pragma library Float

enum floatround_method {
    value_b
}

---

(source_file
  (enum_declaration
    name: (identifier)
    (enum_entry
      name: (identifier)))
  (preproc_pragma
    name: (identifier)
    value: (preproc_text))
  (enum_declaration
    name: (identifier)
    (enum_entry
      name: (identifier))))

=================================
additional operator definitions
=================================

stock Float:operator--(Float:oper) { return oper - 1.0; }
stock Float:operator-(Float:oper)  { return oper ^ Float:cellmin; }

---

(source_file
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    body: (block
      (return_statement
        value: (binary_expression
          left: (identifier)
          right: (float_literal)))))
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    body: (block
      (return_statement
        value: (binary_expression
          left: (identifier)
          right: (tagged_expression
            type: (tagged_type
              tag: (identifier))
            value: (identifier)))))))

=========================
plain braceless function
=========================

stock Float:floatabs(Float:value)
    return value & Float:cellmax;

---

(source_file
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    body: (return_statement
      value: (binary_expression
        left: (identifier)
        right: (tagged_expression
          type: (tagged_type
            tag: (identifier))
          value: (identifier))))))

===========================
braceless state body
===========================

main()
state plain

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (state_statement
      scope: (state_name))))

================================
command-style function wrappers
================================

ACMD:teleport(playerid, params[])    { return 1; }
hook OnPlayerConnect(playerid)       { return 1; }
CMD:goto(playerid, params[])         { return 1; }

---

(source_file
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        name: (identifier)
        (dimension)))
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        name: (identifier)
        (dimension)))
    body: (block
      (return_statement
        value: (integer_literal)))))

==========================
scheduled function intervals
==========================

task RestartUpdate[1000]()
{
  return 1;
}

timer MoveCamera[500](playerid) {
  return 1;
}

static ptask _PlayerAutoSave[(1000 * 60) * 3](playerid) {
  return 1;
}

---

(source_file
  (function_definition
    prefix: (identifier)
    name: (identifier)
    interval: (fixed_dimension
      size: (integer_literal))
    parameters: (parameter_list)
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    prefix: (identifier)
    name: (identifier)
    interval: (fixed_dimension
      size: (integer_literal))
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (return_statement
        value: (integer_literal))))
  (function_definition
    prefix: (identifier)
    name: (identifier)
    interval: (fixed_dimension
      size: (binary_expression
        left: (parenthesized_expression
          expression: (binary_expression
            left: (integer_literal)
            right: (integer_literal)))
        right: (integer_literal)))
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (return_statement
        value: (integer_literal)))))

================
defer statements
================
